--- a/OpsManage/templates/base.html
+++ b/OpsManage/templates/base.html
@@ -130,7 +130,7 @@ desired effect
                             <!-- Menu Footer-->
                             <li class="user-footer">
                                 <div class="pull-left">
-                                    <a class="btn btn-default btn-flat cd-signin" onclick=" layer.open({type: 2,closeBtn: 1,area: ['600px', '600px'],shadeClose: true, content: ['/accounts/editAdmin'],});">修改密码</a>
+                                    <a class="btn btn-default btn-flat cd-signin" onclick=" layer.open({type: 2,title:'',closeBtn: 1,area: ['400px', '300px'],shadeClose: true, content: ['/accounts/editAdmin'],});">修改密码</a>
                                 </div>
                                 <div class="pull-right">
                                     <a href="http://127.0.0.1:8000/logout" class="btn btn-default btn-flat">注销登录</a>
