--- a/OpsManage/templates/cmdb/ServerManage/add/add.html
+++ b/OpsManage/templates/cmdb/ServerManage/add/add.html
@@ -204,6 +204,9 @@
                             {% endfor%}
                         </select>
                         <label class="btn fa fa-check-square-o"></label>
+                        <a class="btn no-padding no-margin" target="_blank" href="/cmdb/editVendor">
+                            <i class="fa  fa-cog"></i>
+                        </a>
                     </div>
                     <!-- /.设备类型 -->
 
