--- a/OpsManage/templates/cmdb/basicData/orgManage.html
+++ b/OpsManage/templates/cmdb/basicData/orgManage.html
@@ -25,6 +25,8 @@
     <li id="contract"><a href="http://127.0.0.1:8000/cmdb/contractManage" >合同管理</a></li>
     <li id="supplier"><a href="http://127.0.0.1:8000/cmdb/supplierManage" >供应商管理</a></li>
     <li id="vendor"><a href="http://127.0.0.1:8000/cmdb/vendorManage" >厂商管理</a></li>
+    <li id="model"><a href="http://127.0.0.1:8000/cmdb/modelManage">型号管理</a></li>
+
 </ul>
 
 <!-- content -->
