--- a/OpsManage/templates/cmdb/basicData/userManage.html
+++ b/OpsManage/templates/cmdb/basicData/userManage.html
@@ -15,6 +15,8 @@
     <li id="contract"><a href="http://127.0.0.1:8000/cmdb/contractManage">合同管理</a></li>
     <li id="supplier"><a href="http://127.0.0.1:8000/cmdb/supplierManage">供应商管理</a></li>
     <li id="vendor"><a href="http://127.0.0.1:8000/cmdb/vendorManage">厂商管理</a></li>
+    <li id="model"><a href="http://127.0.0.1:8000/cmdb/modelManage">型号管理</a></li>
+
 </ul>
 
 <div class="box box-group bg-gray-light " style="min-height: 800px;padding-left: 10px;padding-right: 10px">
